@@ -1,4 +1,5 @@
 5.3.3 -> 5.4a1:
+    - jbj: gpsee: replace WITH_JS everwhere with WITH_GPSEE. GPSEE->JS always.
     - jbj: rpmjs: resecusitate sufficiently to use with jx/ngsr.c. more todo++.
     - eveith: Fix ruby include paths
     - rpm.org: git-v1:339f31face44d877c3a6e2fc780e740e7e236eae.
